--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -31,8 +31,10 @@
         text-overflow: ellipsis;
     }
     &__descr {
-        @extend .dish__title;
         width: 85%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         font-weight: $light;
     }
 
@@ -96,16 +98,18 @@
     .dish {
         padding: 1rem;
 
+        &__content-wrapper {
+            @include flex(false, flex-start);
+        }
+
         &__title {
-           max-width: 350px;
+            width: auto;
+            margin-right: 1em;
         }
 
         &__descr {
-            width: 100%;
-        }
-
-        &__content-wrapper {
-            @include flex(false, flex-start);
+            width: auto;
+            padding-right: 50px;
         }
     }
 }
@@ -117,6 +121,7 @@
 
         &__descr {
             width: 85%;
+            padding-right: 0;
         }
 
         &__content-wrapper {
